[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/cards/old/spectral_spearman/card_pos_spectral_spearman.gd" type="Script" id=1]
[ext_resource path="res://interface/cards/old/spectral_spearman/spearman_card.tscn" type="PackedScene" id=2]
[ext_resource path="res://anim/cards_navigate.tscn" type="PackedScene" id=3]


[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 64, 94 )

[node name="card_pos_spectral_spearman" type="Position2D" groups=[
"card",
]]
position = Vector2( 975, 820 )
script = ExtResource( 1 )

[node name="spearman_card" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" parent="." instance=ExtResource( 3 )]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 11 )
shape = SubResource( 17 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_cards_navigate_animation_finished"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
